<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <ImageView
            android:id="@+id/back_img"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:src="@drawable/left_arrow"
            android:visibility="gone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/nunitosans_semibold"
            android:text="Add Product"
            android:textColor="@color/colorToolbarTitle"
            android:textSize="16sp"
            android:visibility="gone" />
    </RelativeLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:background="@drawable/circle_bg"
            android:padding="5dp">

            <ImageView
                android:id="@+id/container_img"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerInParent="true"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/check_plus" />

            <ImageView
                android:id="@+id/checkedImage"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:src="@drawable/checked" />
        </RelativeLayout>

        <TextView
            android:id="@+id/message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/nunitosans_semibold"
            android:text="Lunch Picked Up Successfully"
            android:textColor="@color/colorToolbarTitle"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/nunitosans_semibold"
            android:gravity="center"
            android:text="Thanks you for reducing waste and helping the\nenvironment."
            android:textColor="@color/colorToolbarTitle"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvRemember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/nunitosans_semibold"
            android:gravity="center"
            android:text="Remember to drop the container in the bin \nwhen you have finished eating."
            android:textColor="#000000"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/paymentReceipt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/nunitosans_semibold"
            android:gravity="center"
            android:visibility="gone"
            android:text="@string/view_payment_receipt"
            android:textColor="#48b4e0"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <Button
            android:id="@+id/done_btn"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginLeft="16dp"
            android:layout_weight="1"
            android:background="@android:drawable/dialog_holo_light_frame"
            android:backgroundTint="@color/appColor"
            android:text="Back To Home"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/confettibg"
        android:id="@+id/confettiView"
        android:visibility="gone"
        android:orientation="vertical">


        <RelativeLayout
            android:id="@+id/badgeContainer"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="150dp"
            android:gravity="center">


            <RelativeLayout
                android:layout_width="187dp"
                android:layout_height="213dp"
                android:layout_centerInParent="true"
                android:layout_marginTop="30dp"
                android:background="@drawable/ic_confbg"
                android:orientation="horizontal" />

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/badgeOne"
                android:layout_centerHorizontal="true"
                android:src="@drawable/tenscan" />

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/badgeTwo"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="30dp"
                android:src="@drawable/tenscan" />

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/badgeThree"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="30dp"
                android:src="@drawable/tenscan" />
        </RelativeLayout>

        <TextView
            android:id="@+id/tvCongrats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/badgeContainer"
            android:layout_centerInParent="true"
            android:fontFamily="@font/gothicaone"
            android:paddingTop="30dp"
            android:text="@string/congratulation"
            android:textColor="@color/white"
            android:textSize="33dp" />

        <TextView
            android:id="@+id/tvInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvCongrats"
            android:layout_centerInParent="true"
            android:fontFamily="@font/gothicaone"
            android:paddingTop="15dp"
            android:text="You have unlocked two badge."
            android:textColor="@color/white"
            android:textSize="19sp" />

        <Button
            android:id="@+id/closeBtn"
            android:layout_width="239dp"
            android:layout_height="60dp"
            android:layout_below="@+id/tvInfo"
            android:layout_centerInParent="true"
            android:layout_marginTop="30dp"
            android:background="@android:drawable/dialog_holo_light_frame"
            android:backgroundTint="@color/appColor"
            android:text="@string/close"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite" />
        <nl.dionsegijn.konfetti.KonfettiView
            android:id="@+id/viewKonfetti"
            android:layout_width="match_parent"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content" />

    </RelativeLayout>

</RelativeLayout>